--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(clean_tbbl)
 export(donut)
 export(fix_labs)
 export(make_clean_factor)
+export(make_title)
 export(parts_and_whole)
 import(bcmaps)
 import(cansim)
