--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,7 +9,7 @@ Description: Some functions I use all the time.
 License: Apache License (== 2.0) | file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.2.1
+RoxygenNote: 7.2.3
 Suggests: 
     knitr,
     rmarkdown
@@ -30,4 +30,5 @@ Imports:
     assertthat,
     ggrepel,
     utils,
-    forcats
+    forcats,
+    plotly
