--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(fix_labs)
 export(make_clean_factor)
 export(make_title)
 export(parts_and_whole)
+export(plotlify)
 import(bcmaps)
 import(cansim)
 import(dplyr)
@@ -26,6 +27,9 @@ import(tibble)
 importFrom(assertthat,assert_that)
 importFrom(ggplot2,labs)
 importFrom(ggrepel,geom_label_repel)
+importFrom(plotly,config)
+importFrom(plotly,ggplotly)
+importFrom(plotly,layout)
 importFrom(scales,percent)
 importFrom(stringr,str_replace_all)
 importFrom(stringr,str_to_title)
